--- a/theme.toml
+++ b/theme.toml
@@ -1,15 +1,15 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "freshStart"
+name = "OriginStart"
 license = "MIT"
-licenselink = "https://github.com/rz3n/hugo-theme-freshstart/blob/master/LICENSE"
-description = "Start Page theme for Hugo"
-homepage = "https://github.com/rz3n/hugo-theme-freshstart"
+licenselink = "https://github.com/SylleoYr/hugo-theme-OriginStart/blob/master/LICENSE"
+description = "A responsive start page theme for Hugo"
+homepage = "https://github.com/SylleoYr/hugo-theme-OriginStart"
 tags = ["start-page", "fast", "single-page", "responsive", "simple", "clean", "one-page", "light"]
 features = ["responsive"]
 min_version = "0.48.0"
 
 [author]
-  name = "Ricardo Franzen"
-  homepage = "https://rfranzen.com"
+  name = "Sylleo Yr"
+  homepage = "https://github.com/SylleoYr"
