--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -114,7 +114,7 @@ params:
       url: https://github.com/SylleoYr/hugo-theme-OriginStart
     - name: Gitee
       icon: fab fa-git-square 
-      url: https:/gitee.com/SylleoYr/hugo-theme-OriginStart
+      url: https://gitee.com/SylleoYr/hugo-theme-OriginStart
 
 
   bookmarks:
